[gd_scene load_steps=10 format=3 uid="uid://0yiqa74ccwgf"]

[ext_resource type="Script" path="res://scripts/tasks/task_temperature.gd" id="1_g3tmk"]
[ext_resource type="Texture2D" uid="uid://svwcesr5po2k" path="res://imgs/sprites/arrow_mask.png" id="2_oacw7"]
[ext_resource type="Texture2D" uid="uid://bxpjgavll1fdl" path="res://imgs/sprites/tasks/reactor/temperature_buttons.png" id="2_tfwo1"]
[ext_resource type="Texture2D" uid="uid://57p6rjvtcmrc" path="res://imgs/sprites/tasks/reactor/temeperature_under.png" id="3_cebdy"]
[ext_resource type="BitMap" path="res://imgs/sprites/arrow_ask_bitmap.tres" id="3_dw3qn"]
[ext_resource type="Texture2D" uid="uid://cviltk10vq2sj" path="res://imgs/sprites/arrow.png" id="4_07wm1"]
[ext_resource type="Texture2D" uid="uid://dqjj3voq38y1g" path="res://imgs/sprites/tasks/reactor/temeperature_progress.png" id="4_7101n"]
[ext_resource type="Texture2D" uid="uid://r3uaige7rjee" path="res://imgs/sprites/tasks/reactor/temeperature_over.png" id="4_k2vh5"]
[ext_resource type="FontFile" uid="uid://dk4sfbnymglpf" path="res://resources/PixeloidSans-mLxMm.ttf" id="6_kylr7"]

[node name="Task_Temperature" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_g3tmk")
task_name = "Temeperature Control"
task_description = "Use the button in the controll room to decrease the temperature"
uncompletable = true
whole_day = true

[node name="Active" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BG" type="TextureRect" parent="Active"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tfwo1")

[node name="ProgressBar" type="TextureProgressBar" parent="Active"]
texture_filter = 1
layout_mode = 0
offset_left = 1479.0
offset_top = 212.0
offset_right = 1561.0
offset_bottom = 823.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_cebdy")
texture_over = ExtResource("4_k2vh5")
texture_progress = ExtResource("4_7101n")

[node name="RichTextLabel" type="RichTextLabel" parent="Active"]
layout_mode = 0
offset_left = 1275.0
offset_top = 242.0
offset_right = 1561.0
offset_bottom = 319.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_kylr7")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "CRITICAL"

[node name="Button" type="TextureButton" parent="Active"]
layout_mode = 0
offset_left = 735.0
offset_top = 420.0
offset_right = 1200.0
offset_bottom = 765.0

[node name="Leave" type="TextureButton" parent="Active"]
self_modulate = Color(0, 0.792157, 1, 0.533333)
texture_filter = 1
offset_left = 79.0
offset_top = 788.0
offset_right = 273.0
offset_bottom = 1023.0
texture_hover = ExtResource("2_oacw7")
texture_click_mask = ExtResource("3_dw3qn")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Active/Leave"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_07wm1")

[connection signal="pressed" from="Active/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Active/Leave" to="." method="_on_leave_pressed"]
